# coffer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  example.txt
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: linux-build.yml  macos-build.yml  pages.yml  quality.yml  security-audit.yml  windows-build.yml
docs/: coffer-format-v1.md  coffer-format-v2.md  development.md  features.md  key-carrier-safety.md  public-readiness.md  recovery.md  roadmap.md  security-audit.md  threat-model.md
site/: 404.html  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
src/: app.rs  crypto.rs  error.rs  key.rs  main.rs  paths.rs
src/coffer/: error.rs  format.rs  key.rs  mod.rs  ops.rs
src/ui/: dialogs.rs  home.rs  mod.rs  secure_viewer.rs  theme.rs  widgets.rs
tools/: check_docs.py  check_site.py  recover_v1.py
